--- a/countdown/src/App.css
+++ b/countdown/src/App.css
@@ -24,12 +24,12 @@
 .App-header {
     position: relative;
     z-index: 3;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    /* font-size: calc(10px + 2vmin); */
     color: white;
     
 }
