--- a/countdown/src/App.css
+++ b/countdown/src/App.css
@@ -1,17 +1,9 @@
 .App {
   text-align: center;
   transition: all ease-in 0.5s;
-}
+  width: 100%; 
+  height: 100vh;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 .overlay {
     position: absolute;
@@ -31,21 +23,12 @@
     justify-content: center;
     /* font-size: calc(10px + 2vmin); */
     color: white;
-    
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .head, .head_finished {
     font-size: 36px;
     font-weight: 700;
