--- a/countdown/src/App.css
+++ b/countdown/src/App.css
@@ -8,7 +8,7 @@
 .overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #00000044;
     z-index: 2;
 }
